Work in progress in overriding fos controllers

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -1,3 +1,6 @@
 beeriously:
-  register:
-    new_user: Registrieren
+  security:
+    register:
+      new_user: Registrieren
+    forgot:
+      password: Passwort vergessen?
