--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -2,5 +2,11 @@ beeriously:
   security:
     register:
       new_user: Register New User
+      need_account: Need a Beeriously Account?
+      please_provide_additional_deatils: 'Please provide some additional details:'
+      hello_user:  Hello %username%,
+      first_name: First Name
+      last_name: Last Name
+      continue: Continue
     forgot:
       password: Forgot Password?
