--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -37,7 +37,7 @@ beeriously:
           description: Fahrenheit (°F)
 
   organization:
-    new_organization_name_from_brewer: "Hausbrauerei zum %full_name%s "
+    new_organization_name_from_brewer: "Hausbrauerei zum %full_name%"
 
   security:
     back_to_login: Zurück zur Anmelden
