--- a/translations/messages.us.yml
+++ b/translations/messages.us.yml
@@ -34,7 +34,7 @@ beeriously.measurements.mass_volume.systems.us.description: 'U.S. Customary Unit
 beeriously.measurements.temperature.description: Temperature
 beeriously.measurements.temperature.systems.c.description: 'Celsius (°C)'
 beeriously.measurements.temperature.systems.f.description: 'Fahrenheit (°F)'
-beeriously.organization.new_brewery_name_from_brewer: "%full_name%'s Brewery"
+beeriously.organization.new_brewery_name_from_brewer: '%full_name%''s Brewery'
 beeriously.security.back_to_login: '< Back to Login'
 beeriously.security.register.hello_user: 'Hello %username%,'
 beeriously.security.register.first_name: 'First name'
@@ -56,20 +56,26 @@ beeriously.global.save: Save
 beeriously.global.datetime_format: 'm/d/Y H:i \G\M\T'
 beeriously.global.close: Close
 beeriously.global.menu: Menu
-beeriously.brewery.remove_a_brewer.submit_button: Yes, Remove Brewer
+beeriously.brewery.remove_a_brewer.submit_button: 'Yes, Remove Brewer'
 beeriously.brewery.remove_a_brewer.title: 'Remove Brewer'
 beeriously.brewery.remove_a_brewer.message: 'Are you sure you want to remove %full_name%?'
-beeriously.brewer.registration.email.subject: Welcome to Beeriously %username%!
-beeriously.brewer.registration.email.message: |
-                                                          Hello %username%!
-
-                                                          To finish activating your account - please visit %confirmationUrl%
-
-                                                          This link can only be used once to validate your account.
+beeriously.brewer.registration.email.subject: 'Welcome to Beeriously %username%!'
+beeriously.brewer.registration.email.message: "Hello %username%!\n\nTo finish activating your account - please visit %confirmationUrl%\n\nThis link can only be used once to validate your account.\n"
 beeriously.email.signature: "Warm wishes and cold beer,\nAndrew Cassell (creator of Beeriously)"
 beeriously.resetting.email.subject: 'Reset Password'
 beeriously.resetting.email.message: "Hello %username%!\n\nTo reset your password - please visit %confirmationUrl%"
-beeriously.brewery.brewer_removed_successfully: Brewer account deleted successfully
-beeriously.brewery.brewer_added_successfully: Brewer account added successfully
-beeriously.ajax.default_error_message: Sorry, you are not currently logged in or an unknown error has occurred. Please refresh the page to continue.
+beeriously.brewery.brewer_removed_successfully: 'Brewer account deleted successfully'
+beeriously.brewery.brewer_added_successfully: 'Brewer account added successfully'
+beeriously.ajax.default_error_message: 'Sorry, you are not currently logged in or an unknown error has occurred. Please refresh the page to continue.'
 beeriously.brewery.history.event.brewer_was_removed: 'Brewer "%brewer_full_name%" was removed'
+beeriously.brewer.registration.invalid_username: 'Username is not allowed'
+beeriously.brewer.registration.password_too_short: 'Password is too short'
+beeriously.brewer.registration.password_can_not_match_email_or_username: 'Password can not match username or email'
+beeriously.brewer.name: 'Brewer Name'
+beeriously.profile.change_name: 'Change Name'
+beeriously.profile.change_username_or_email: Change Username or Email
+beeriously.profile.password: Password
+beeriously.profile.change_password: Change Password
+beeriously.profile.view_brewery_settings: View Brewery Settings
+beeriously.profile.brewery_name: Brewery Name
+
