--- a/translations/messages.us.yml
+++ b/translations/messages.us.yml
@@ -79,3 +79,5 @@ beeriously.profile.change_password: Change Password
 beeriously.profile.view_brewery_settings: View Brewery Settings
 beeriously.profile.brewery_name: Brewery Name
 
+beeriously.profile.name_changed_successfully: Brewer Name Changed Successfully
+beeriously.brewery.history.event.brewer_name_change: 'Brewer "%brewer_full_name%" name was changed'
